[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/Fonts/ZFTerminal/ZFTERMIN__.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Characters/Players/Dog/dog-move.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/Players/Dog/dog-idle.png" type="Texture" id=3]
[ext_resource path="res://Characters/Players/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Players/TheDoge/TheDoge.gd" type="Script" id=5]
[ext_resource path="res://Assets/Effects/SupaBlast.png" type="Texture" id=6]
[ext_resource path="res://Assets/Skills/spacial_skills/BigDog-idle.png" type="Texture" id=9]
[ext_resource path="res://Assets/Skills/spacial_skills/BigDogDetail.png" type="Texture" id=13]
[ext_resource path="res://Characters/Hitbox.gd" type="Script" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 8.0
height = 28.0

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 14.2, 9 )

[sub_resource type="CapsuleShape2D" id=27]
radius = 8.72813
height = 32.6325

[sub_resource type="CapsuleShape2D" id=28]
radius = 8.96478
height = 33.3217

[sub_resource type="CapsuleShape2D" id=31]
radius = 100.966
height = 100.585

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpacialSkill/Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpacialSkill/Sprite2/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpacialSkill/Sprite2/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 56, -15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpacialSkill/Sprite2/Sprite2:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpacialSkill/Sprite2/Sprite2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 44.3333, 23.3333 ) ]
}

[sub_resource type="Animation" id=17]
resource_local_to_scene = true
resource_name = "dead"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "gameover"
} ]
}

[sub_resource type="Animation" id=18]
resource_local_to_scene = true
resource_name = "hurt"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=19]
resource_local_to_scene = true
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=20]
resource_local_to_scene = true
resource_name = "move"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "move" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=21]
resource_local_to_scene = true
resource_name = "spacial_attack"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpacialSkill/Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpacialSkill/Sprite:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 1.1, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -1, 0, 0, -1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpacialSkill/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 100, 0 ), Vector2( 100, -10 ), Vector2( 100, 10 ), Vector2( 100, -10 ), Vector2( 100, 10 ), Vector2( 100, -10 ), Vector2( 100, 10 ), Vector2( 100, -10 ), Vector2( 100, 10 ), Vector2( 100, -10 ), Vector2( 100, 10 ), Vector2( 100, -10 ), Vector2( 100, 10 ), Vector2( 100, -10 ), Vector2( 100, 10 ), Vector2( 100, -10 ), Vector2( 100, 10 ), Vector2( 100, -10 ), Vector2( 100, 10 ), Vector2( 100, -10 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpacialSkill/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 3, 2, 3, 2, 3, 2, 3, 2, 3, 2, 3, 2, 3, 2, 3, 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpacialSkill:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpacialSkill/Sprite/Hitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SpacialSkill/Sprite2:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SpacialSkill/Sprite2/Sprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpacialSkill/Sprite2/Sprite:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = false
tracks/8/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 56, -15 ), Vector2( 69.3333, -2.66667 ), Vector2( 47, -15.3333 ), Vector2( 64.3333, -12.6667 ), Vector2( 82.6667, -8.66667 ), Vector2( 51, -15.3333 ), Vector2( 59.6667, -11.6667 ), Vector2( 46.3334, -15.3333 ), Vector2( 68.3333, -2.66667 ), Vector2( 43.6667, -12.6667 ), Vector2( 67.6667, -8 ), Vector2( 47, -14.3333 ), Vector2( 65.3333, -3.33333 ), Vector2( 46, -10.3333 ), Vector2( 68.3333, -4.33333 ), Vector2( 47, -10.3333 ), Vector2( 71.6667, -7.66667 ), Vector2( 52.6667, -13 ), Vector2( 68.3333, -3 ), Vector2( 57.3333, -7.33333 ), Vector2( 44.6667, -13.3333 ), Vector2( 66.3333, -4.66667 ), Vector2( 50.6667, -14.3333 ), Vector2( 63.3333, -3 ), Vector2( 44.6667, -15.3333 ), Vector2( 56, -10.3333 ), Vector2( 63.6667, -4 ), Vector2( 43.6667, -13.6667 ), Vector2( 60, -8 ), Vector2( 49.3333, -13.3333 ), Vector2( 63, -9.66667 ), Vector2( 43.3333, -14.3333 ), Vector2( 55.3333, -5.66667 ), Vector2( 45.3333, -7.33333 ), Vector2( 59.3333, -1.33333 ), Vector2( 45.3333, -12.6667 ), Vector2( 59, -10.3333 ), Vector2( 63, -5.33333 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SpacialSkill/Sprite2/Sprite2:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = false
tracks/9/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SpacialSkill/Sprite2/Sprite2:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = false
tracks/10/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 44.3333, 23.3333 ), Vector2( 60.3333, 21.3333 ), Vector2( 71.6667, 15 ), Vector2( 50.3333, 25 ), Vector2( 76, 14.6667 ), Vector2( 40.6667, 27.3333 ), Vector2( 55, 18.6667 ), Vector2( 63, 18 ), Vector2( 39.3333, 20.6667 ), Vector2( 63.6667, 14 ), Vector2( 54.6667, 20 ), Vector2( 36, 24 ), Vector2( 55.3333, 19.3333 ), Vector2( 63.6667, 14 ), Vector2( 40, 21 ), Vector2( 68.6667, 13.6667 ), Vector2( 45, 24 ), Vector2( 73, 18 ), Vector2( 53, 22 ), Vector2( 68.3333, 14.6667 ), Vector2( 42.6667, 21.3333 ), Vector2( 65.3333, 17 ), Vector2( 66.6667, 13.3333 ), Vector2( 44, 20.3333 ), Vector2( 54, 12.6667 ), Vector2( 62.6667, 9 ), Vector2( 48.3333, 16 ), Vector2( 61.6667, 11 ), Vector2( 45, 17 ), Vector2( 60, 10 ), Vector2( 64.3333, 8.33333 ), Vector2( 49.3333, 12.6667 ), Vector2( 38, 18.3333 ), Vector2( 60.6667, 13.3333 ), Vector2( 45.6667, 18.3333 ), Vector2( 51.6667, 15.3333 ), Vector2( 62, 11.6667 ), Vector2( 49, 15 ) ]
}

[sub_resource type="CircleShape2D" id=12]
radius = 20.0

[sub_resource type="CircleShape2D" id=13]
radius = 2.23607

[sub_resource type="DynamicFont" id=15]
resource_local_to_scene = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=25]
resource_local_to_scene = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
resource_local_to_scene = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=24]
resource_local_to_scene = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpacialSkill/Sprite2/Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpacialSkill/Sprite2/Sprite3/Area2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpacialSkill/Sprite2/Sprite/Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpacialSkill/Sprite2/Sprite2/Area2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=30]
resource_name = "spell_attack"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpacialSkill:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpacialSkill/Sprite/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpacialSkill/Sprite2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SpacialSkill/Sprite2/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SpacialSkill/Sprite2/Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 56, -15 ), Vector2( 69.3333, -2.66667 ), Vector2( 47, -15.3333 ), Vector2( 64.3333, -12.6667 ), Vector2( 82.6667, -8.66667 ), Vector2( 51, -15.3333 ), Vector2( 59.6667, -11.6667 ), Vector2( 46.3334, -15.3333 ), Vector2( 68.3333, -2.66667 ), Vector2( 43.6667, -12.6667 ), Vector2( 67.6667, -8 ), Vector2( 47, -14.3333 ), Vector2( 65.3333, -3.33333 ), Vector2( 46, -10.3333 ), Vector2( 68.3333, -4.33333 ), Vector2( 47, -10.3333 ), Vector2( 71.6667, -7.66667 ), Vector2( 52.6667, -13 ), Vector2( 68.3333, -3 ), Vector2( 57.3333, -7.33333 ), Vector2( 44.6667, -13.3333 ), Vector2( 66.3333, -4.66667 ), Vector2( 50.6667, -14.3333 ), Vector2( 63.3333, -3 ), Vector2( 44.6667, -15.3333 ), Vector2( 56, -10.3333 ), Vector2( 63.6667, -4 ), Vector2( 43.6667, -13.6667 ), Vector2( 60, -8 ), Vector2( 49.3333, -13.3333 ), Vector2( 63, -9.66667 ), Vector2( 43.3333, -14.3333 ), Vector2( 55.3333, -5.66667 ), Vector2( 45.3333, -7.33333 ), Vector2( 59.3333, -1.33333 ), Vector2( 45.3333, -12.6667 ), Vector2( 59, -10.3333 ), Vector2( 63, -5.33333 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("SpacialSkill/Sprite2/Sprite2:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SpacialSkill/Sprite2/Sprite2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 44.3333, 23.3333 ), Vector2( 60.3333, 21.3333 ), Vector2( 71.6667, 15 ), Vector2( 50.3333, 25 ), Vector2( 76, 14.6667 ), Vector2( 40.6667, 27.3333 ), Vector2( 55, 18.6667 ), Vector2( 63, 18 ), Vector2( 39.3333, 20.6667 ), Vector2( 63.6667, 14 ), Vector2( 54.6667, 20 ), Vector2( 36, 24 ), Vector2( 55.3333, 19.3333 ), Vector2( 63.6667, 14 ), Vector2( 40, 21 ), Vector2( 68.6667, 13.6667 ), Vector2( 45, 24 ), Vector2( 73, 18 ), Vector2( 53, 22 ), Vector2( 68.3333, 14.6667 ), Vector2( 42.6667, 21.3333 ), Vector2( 65.3333, 17 ), Vector2( 66.6667, 13.3333 ), Vector2( 44, 20.3333 ), Vector2( 54, 12.6667 ), Vector2( 62.6667, 9 ), Vector2( 48.3333, 16 ), Vector2( 61.6667, 11 ), Vector2( 45, 17 ), Vector2( 60, 10 ), Vector2( 64.3333, 8.33333 ), Vector2( 49.3333, 12.6667 ), Vector2( 38, 18.3333 ), Vector2( 60.6667, 13.3333 ), Vector2( 45.6667, 18.3333 ), Vector2( 51.6667, 15.3333 ), Vector2( 62, 11.6667 ), Vector2( 49, 15 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("SpacialSkill/Sprite2/Sprite3:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("SpacialSkill/Sprite2/Sprite3/Area2D/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.9, 1.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("SpacialSkill/Sprite2/Sprite/Area2D/CollisionShape2D:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("SpacialSkill/Sprite2/Sprite2/Area2D/CollisionShape2D:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="TheDoge" instance=ExtResource( 4 )]
script = ExtResource( 5 )
max_hp = 50
hp = 50
atk = 100
spd = 50
collected_coin = 50

[node name="AnimatedSprite" parent="." index="1"]
modulate = Color( 1, 0.996078, 0.996078, 1 )
frames = SubResource( 9 )
frame = 3

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 1, 0 )
shape = SubResource( 11 )

[node name="SpacialSkill" parent="." index="3"]
visible = false

[node name="Sprite" type="Sprite" parent="SpacialSkill" index="0"]
visible = false
position = Vector2( 100, -10 )
scale = Vector2( 5, 5 )
z_index = -1
texture = ExtResource( 13 )
hframes = 4
frame = 2

[node name="Hitbox" type="Area2D" parent="SpacialSkill/Sprite" index="0"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpacialSkill/Sprite/Hitbox" index="0"]
position = Vector2( -4.2, 0.4 )
shape = SubResource( 23 )
disabled = true

[node name="Sprite2" type="Sprite" parent="SpacialSkill" index="1"]
position = Vector2( -3, -68 )
scale = Vector2( 3, 3 )
z_index = -1
texture = ExtResource( 13 )
hframes = 4

[node name="Sprite" type="Sprite" parent="SpacialSkill/Sprite2" index="0"]
position = Vector2( 56, -15 )
rotation = 0.208208
texture = ExtResource( 13 )
hframes = 4
frame = 2

[node name="Area2D" type="Area2D" parent="SpacialSkill/Sprite2/Sprite" index="0"]
collision_layer = 0
collision_mask = 65540
script = ExtResource( 14 )
damage = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpacialSkill/Sprite2/Sprite/Area2D" index="0"]
position = Vector2( -8.07068, -2.72389 )
rotation = -1.30756
shape = SubResource( 27 )

[node name="Sprite2" type="Sprite" parent="SpacialSkill/Sprite2" index="1"]
position = Vector2( 44.3333, 23.3333 )
texture = ExtResource( 13 )
hframes = 4
frame = 3

[node name="Area2D" type="Area2D" parent="SpacialSkill/Sprite2/Sprite2" index="0"]
collision_layer = 0
collision_mask = 65540
script = ExtResource( 14 )
damage = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpacialSkill/Sprite2/Sprite2/Area2D" index="0"]
position = Vector2( -10.3333, 2.66667 )
rotation = 1.28194
shape = SubResource( 28 )

[node name="Sprite3" type="Sprite" parent="SpacialSkill/Sprite2" index="2"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
hframes = 4
vframes = 10

[node name="Area2D" type="Area2D" parent="SpacialSkill/Sprite2/Sprite3" index="0"]
collision_layer = 0
collision_mask = 65540
script = ExtResource( 14 )
damage = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpacialSkill/Sprite2/Sprite3/Area2D" index="0"]
position = Vector2( 58, 0 )
rotation = 1.60329
shape = SubResource( 31 )
disabled = true

[node name="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 26 )
anims/dead = SubResource( 17 )
anims/hurt = SubResource( 18 )
anims/idle = SubResource( 19 )
anims/move = SubResource( 20 )
anims/spacial_attack = SubResource( 21 )

[node name="CollisionShape2D" parent="PickupRadius" index="0"]
shape = SubResource( 12 )

[node name="CollisionShape2D" parent="CollectArea" index="0"]
shape = SubResource( 13 )

[node name="Label" parent="UI/GUI/LevelUp" index="0"]
custom_fonts/font = SubResource( 15 )

[node name="SpacialSkillProgress" parent="UI/GUI" index="3"]
texture_under = ExtResource( 9 )

[node name="EDC" parent="UI/GUI" index="6"]
custom_fonts/font = SubResource( 25 )

[node name="EnemyDestroyedCount" parent="UI/GUI" index="7"]
custom_fonts/font = SubResource( 14 )

[node name="RichTextLabel" parent="UI/GUI/Popup" index="1"]
custom_fonts/normal_font = SubResource( 24 )

[node name="AnimationPlayer_spell" parent="." index="13"]
anims/RESET = SubResource( 29 )
anims/spell_attack = SubResource( 30 )

[editable path="UI/GUI/LevelUp"]
